# cats

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  ENGINEERING_PRINCIPLES.md  GEMINI.md  GEMINI_FIX_REPORT.md  LICENSE  README.md
.claude/: settings.local.json
cmake/: libsed-config.cmake.in
docs/: README.md  cats_cli_guide.md  cats_cli_transaction_schema.md  cookbook.md  design_nvme_sed_separation.md  eval_platform_guide.md  examples.md  rosetta_stone.md  sed_drive_guide.md  tc_cookbook.md  tcg_sed_lecture.md  test_scenarios.md  work_history.md
docs/internal/: author_to_mentor.md  cats_cli_review.md  future_api_ideas.md  hammurabi_code.md  mentor_letter.md  mentor_reply.md  work_history.md
examples/: 01_hello_discovery.cpp  02_properties.cpp  03_sessions.cpp  04_read_msid.cpp  05_take_ownership.cpp  06_activate_locking.cpp  07_locking_ranges.cpp  08_user_management.cpp  09_mbr_shadow.cpp  10_datastore.cpp  11_crypto_erase.cpp  12_factory_reset.cpp  13_enterprise_bands.cpp  14_error_handling.cpp  15_wire_inspection.cpp  16_eval_step_by_step.cpp  17_composite_patterns.cpp  18_fault_injection.cpp  19_multi_session.cpp  20_custom_transport.cpp  21_transactions.cpp  22_sedutil_initial_setup.cpp  23_sedutil_compat_setup.cpp  appnote_block_sid.cpp  appnote_datastore.cpp  appnote_enterprise.cpp  appnote_mbr.cpp  appnote_ns_locking.cpp  appnote_opal.cpp  appnote_psid.cpp  eval_basic_check.cpp  eval_enterprise_hw.cpp  eval_full_demo.cpp  eval_mt_comprehensive.cpp  eval_multi_session.cpp  eval_props_diag.cpp  eval_sedutil_query.cpp  eval_session_loop.cpp  eval_tc_utils.cpp  eval_worker_pattern.cpp  (+1 more)
examples/appnote/: appnote_block_sid.cpp  appnote_datastore.cpp  appnote_enterprise.cpp  appnote_mbr.cpp  appnote_ns_locking.cpp  appnote_opal.cpp  appnote_psid.cpp
examples/basic/: discovery.cpp  enterprise_band.cpp  lock_unlock.cpp  opal_setup.cpp
examples/eval/: full_demo.cpp  multithread.cpp  query_flow.cpp  reset_scenarios.cpp  step_by_step.cpp  tc_utils.cpp  worker_pattern.cpp
examples/facade/: 01_query.cpp  02_take_ownership.cpp  03_opal_full_setup.cpp  04_multi_session.cpp  05_multi_pf.cpp  06_enterprise_band.cpp  07_revert.cpp  08_aging_4session.cpp  09_custom_transport.cpp  10_interactive.cpp
include/: cats.h
include/libsed/: sed_device.h  sed_library.h
include/libsed/cli/: cli_common.h
include/libsed/codec/: token_encoder.h
include/libsed/core/: error.h  log.h  types.h  uid.h
include/libsed/debug/: command_logger.h  logging_transport.h
include/libsed/discovery/: feature_descriptor.h
include/libsed/eval/: eval_api.h  eval_composite.h  eval_types.h  test_helpers.h
include/libsed/facade/: sed_drive.h
include/libsed/method/: method_call.h  method_result.h  method_uids.h  param_encoder.h
include/libsed/security/: hash_password.h
include/libsed/session/: com_id_manager.h  session.h
include/libsed/transport/: null_nvme_device.h  nvme_transport.h  sim_transport.h
scripts/: capture_golden.sh  sedutil_basic_check.sh  sedutil_session_loop.sh
src/codec/: token_encoder.cpp
src/debug/: command_logger.cpp  logging_transport.cpp
src/discovery/: discovery.cpp  feature_descriptor.cpp
src/eval/: eval_api.cpp  eval_api_enterprise.cpp  eval_api_internal.h  eval_api_locking.cpp  eval_api_nvme.cpp  eval_api_table.cpp  eval_api_tclib.cpp  eval_api_transaction.cpp  eval_api_user.cpp  eval_composite.cpp
src/facade/: sed_drive.cpp
src/method/: method_call.cpp  method_result.cpp  param_decoder.cpp  param_encoder.cpp
src/packet/: packet_builder.cpp
src/security/: hash_password.cpp
src/session/: com_id_manager.cpp  session.cpp
src/ssc/enterprise/: enterprise_session.cpp
src/table/: table_ops.cpp
src/transport/: ata_transport.cpp  nvme_transport.cpp  scsi_transport.cpp  sim_transport.cpp
tests/: test_main.cpp
tests/fixtures/: tx_sample_genkey.json  tx_sample_read.json  tx_sample_txn.json
tests/fixtures/golden/: README.md  manifest.json
tests/integration/: cats_cli_smoke.sh  golden_validator.cpp  ioctl_validator.cpp  packet_diff.h
tests/scenarios/: device_runner.cpp  scenario_main.cpp  test_L1_basic.cpp  test_L2_sequence.cpp  test_L3_cross.cpp  test_L4_negative.cpp  test_L5_advanced.cpp  test_helper.h  test_sim_basic.cpp  test_sim_comprehensive.cpp
tests/unit/: test_cats_cli_transaction.cpp  test_debug_layer.cpp  test_hash.cpp  test_logging.cpp  test_method.cpp  test_session.cpp
tools/: ioctl_validator.cpp  packet_decode.cpp  props_diag.cpp  props_diff.cpp  protocol_trace.cpp  pwhash.cpp  sed_discover.cpp  sed_manage.cpp  sed_sim_compare.cpp  token_dump.cpp
tools/cats-cli/: main.cpp  transaction.cpp  transaction.h
tools/sed_compare/: common.cpp  common.h  main.cpp  t1_initial_setup.cpp  t1_psid_revert.cpp  t1_query.cpp  t1_revert_locking_sp.cpp  t1_revert_tper.cpp  t1_set_sid_password.cpp  t2_activate_locking.cpp  t2_enable_locking_range.cpp  t2_enable_user.cpp  t2_list_locking_ranges.cpp  t2_set_locking_range.cpp  t2_set_password.cpp  t2_setup_locking_range.cpp  t3_data_store.cpp  t3_rekey.cpp  t3_set_mbr.cpp
